# Smartschool-MCP

./: .coderabbit.yaml  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml  server.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  update-smartschool.yml
smartschool_mcp/: __init__.py  __main__.py  auth.py  server.py
tests/: conftest.py  test_auth.py  test_helpers.py  test_main.py  test_middleware.py  test_server_session.py  test_tools.py  test_universal.py
