[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smartschool-mcp"
version = "0.2.0"
description = "Access Smartschool courses, grades, assignments, messages, schedule, reports and more through the Model Context Protocol"
readme = "README.md"
authors = [{name = "Mauro Druwel", email = "mauro.druwel@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "cachetools>=7.0.5",
    "mcp[cli]>=1.26.0",
    "smartschool",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-asyncio>=1.0",
    "black>=26.0",
    "ruff>=0.15.0",
    "mypy>=1.19",
    "types-cachetools>=6.2.0",
]

[project.urls]
Homepage = "https://github.com/MauroDruwel/Smartschool-MCP"
Repository = "https://github.com/MauroDruwel/Smartschool-MCP"
Issues = "https://github.com/MauroDruwel/Smartschool-MCP/issues"

[project.scripts]
smartschool-mcp = "smartschool_mcp.__main__:main"

[tool.uv.sources]
smartschool = { git = "https://github.com/svaningelgem/smartschool.git" }

[tool.hatch.build.targets.wheel]
packages = ["smartschool_mcp"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
]
ignore = [
    "B008",   # do not perform function calls in argument defaults
    "SIM105", # use contextlib.suppress – try/except is fine here
]

[tool.ruff.lint.isort]
known-first-party = ["smartschool_mcp"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is fine in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "integration: marks tests as requiring real Smartschool credentials (deselect with -m 'not integration')",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["smartschool_mcp"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
